--- a/styel.css
+++ b/styel.css
@@ -69,3 +69,16 @@ button:hover
     filter:brightness(1.2);
     cursor: pointer;
 }
+
+.resposta 
+{
+    margin: 30px;
+}
+
+.rsposta div
+{
+    font-size: 16px;
+    font-weight: normal;
+    opacity: 0.8;
+    margin-bottom: 10px;
+}
